test/corpus/format-converter.txt
======
Simple
======

a { out "%c" }

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter))))))

====
Enum
====

a { out "%{OFF|ON}" }

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter
	  (format_enum
	   (enum_specifier (enum_constant))
	   (enum_specifier (enum_constant)))))))))

==============
Numerical enum
==============

a { out "%{0|1}" }

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter
	  (format_enum
	   (enum_specifier (enum_constant))
	   (enum_specifier (enum_constant)))))))))

============
Example "lo"
============

lo {
	out '%(NAME)s = %i = %#x = %b(bin) = %D(BCD)';
}

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter (format_inout (record_name)))
	 (format_converter)
	 (format_converter (format_flag))
	 (format_converter)
	 (format_converter))))))

============================================
Checksum with width, precision, and variable
============================================

checksum {
    out "%s %0.1<\$1>";
}

---

(source_file
 (function
  (function_name)
  (command
   (command_name)
   (string
	(quoted_literal
	 (format_converter)
	 (format_converter
	  (number)
	  (number)
	  (checksum
	   (variable_expansion (variable_name)))))))))
